overlap issue fixed

--- a/stylesheets/newversion.css
+++ b/stylesheets/newversion.css
@@ -123,7 +123,7 @@ section img {
 }
 .zmh_cursor {
 	width: 100%;
-    height: 30px;
+    height: auto;
 }
 .zmh_cursor:hover {
 	cursor: pointer;
